Fix info box alignment

--- a/src/scss/frontend-rtl.scss
+++ b/src/scss/frontend-rtl.scss
@@ -29,6 +29,6 @@
 .rtl {
 	.top-icon .aio-icon-description,
 	.top-icon .aio-icon-header{
-		text-align: right;
+		text-align: right !important;
 	}
 }
