--- a/src/scss/parts/frontend/custom.scss
+++ b/src/scss/parts/frontend/custom.scss
@@ -37,5 +37,5 @@
 
 .top-icon .aio-icon-description,
 .top-icon .aio-icon-header{
-	text-align: left;
+	text-align: left !important;
 }
